--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard • AI Interviewer</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -122,6 +122,14 @@
         <!-- Progress Chart -->
         <div class="chart-section">
           <h2 class="section-title">Progress Over Time</h2>
+          <div class="section-loader" id="chartLoader">
+            <div class="loader-spinner-small">
+              <div class="spinner-ring-small"></div>
+              <div class="spinner-ring-small"></div>
+              <div class="spinner-ring-small"></div>
+            </div>
+            <p class="loader-text-small">Loading chart...</p>
+          </div>
           <div class="chart-container">
             <canvas id="progressChart"></canvas>
           </div>
@@ -130,6 +138,14 @@
         <!-- Topic Performance -->
         <div class="topics-section">
           <h2 class="section-title">Topic Performance</h2>
+          <div class="section-loader" id="topicsLoader">
+            <div class="loader-spinner-small">
+              <div class="spinner-ring-small"></div>
+              <div class="spinner-ring-small"></div>
+              <div class="spinner-ring-small"></div>
+            </div>
+            <p class="loader-text-small">Loading topics...</p>
+          </div>
           <div class="topics-grid" id="topicsGrid">
             <!-- Topic cards will be populated by JavaScript -->
           </div>
@@ -138,6 +154,14 @@
         <!-- Recent Activity -->
         <div class="activity-section">
           <h2 class="section-title">Recent Activity</h2>
+          <div class="section-loader" id="activityLoader">
+            <div class="loader-spinner-small">
+              <div class="spinner-ring-small"></div>
+              <div class="spinner-ring-small"></div>
+              <div class="spinner-ring-small"></div>
+            </div>
+            <p class="loader-text-small">Loading activity...</p>
+          </div>
           <div class="activity-list" id="activityList">
             <!-- Activity items will be populated by JavaScript -->
           </div>
@@ -201,14 +225,14 @@
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="supabase-config.js"></script>
-  <script src="supabaseClient.js"></script>
-  <script src="supabase-db.js"></script>
-  <script src="backend-api.js"></script>
-  <script src="auth-check.js"></script>
-  <script src="backend-simulator.js"></script>
-  <script src="modern-ui.js"></script>
-  <script src="page-transitions.js"></script>
-  <script src="dashboard.js"></script>
+  <script src="js/supabase-config.js"></script>
+  <script src="js/supabaseClient.js"></script>
+  <script src="js/supabase-db.js"></script>
+  <script src="js/backend-api.js"></script>
+  <script src="js/auth-check.js"></script>
+  <script src="js/backend-simulator.js"></script>
+  <script src="js/modern-ui.js"></script>
+  <script src="js/page-transitions.js"></script>
+  <script src="js/dashboard.js"></script>
 </body>
 </html>
