--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up • AI Interviewer</title>
-    <link rel="stylesheet" href="main.css">
+    <title>Login • AI Interviewer</title>
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -58,7 +58,7 @@
                 <a href="contact.html">Contact</a>
                 <a href="dashboard.html">Dashboard</a>
                 <a href="practice.html">Practice</a>
-                <a href="login.html" class="login-link"><i class="fa-regular fa-user"></i> Login</a>
+                <a href="login.html" class="active login-link"><i class="fa-regular fa-user"></i> Login</a>
             </nav>
         </div>
     </header>
@@ -67,8 +67,8 @@
         <section class="hero">
             <div class="container">
                 <div class="hero-content">
-                    <h1>Join AI Interviewer</h1>
-                    <p class="subtitle">Create your account and start your interview preparation journey.</p>
+                    <h1>Welcome Back</h1>
+                    <p class="subtitle">Sign in to continue your interview preparation journey.</p>
                 </div>
             </div>
         </section>
@@ -77,31 +77,11 @@
             <div class="auth-container">
                 <div class="auth-form-container">
                     <div class="auth-header">
-                        <h2>Create Account</h2>
-                        <p>Fill in your details to get started</p>
+                        <h2>Sign In</h2>
+                        <p>Enter your credentials to access your account</p>
                     </div>
                     
-                    <form class="auth-form" id="signupForm">
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="firstName">First Name</label>
-                                <div class="input-group">
-                                    <i class="fa-solid fa-user input-icon"></i>
-                                    <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required>
-                                </div>
-                                <div class="error-message" id="firstNameError"></div>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="lastName">Last Name</label>
-                                <div class="input-group">
-                                    <i class="fa-solid fa-user input-icon"></i>
-                                    <input type="text" id="lastName" name="lastName" placeholder="Enter your last name" required>
-                                </div>
-                                <div class="error-message" id="lastNameError"></div>
-                            </div>
-                        </div>
-
+                    <form class="auth-form" id="loginForm">
                         <div class="form-group">
                             <label for="email">Email Address</label>
                             <div class="input-group">
@@ -112,54 +92,28 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="username">Username</label>
-                            <div class="input-group">
-                                <i class="fa-solid fa-at input-icon"></i>
-                                <input type="text" id="username" name="username" placeholder="Choose a username" required>
-                            </div>
-                            <div class="error-message" id="usernameError"></div>
-                        </div>
-
-                        <div class="form-group">
                             <label for="password">Password</label>
                             <div class="input-group">
                                 <i class="fa-solid fa-lock input-icon"></i>
-                                <input type="password" id="password" name="password" placeholder="Create a password" required>
+                                <input type="password" id="password" name="password" placeholder="Enter your password" required>
                                 <button type="button" class="password-toggle" id="passwordToggle">
                                     <i class="fa-solid fa-eye"></i>
                                 </button>
                             </div>
-                            <div class="password-strength" id="passwordStrength" style="display: none;">
-                                <div class="strength-bar">
-                                    <div class="strength-fill" id="strengthFill"></div>
-                                </div>
-                                <div class="strength-text" id="strengthText"></div>
-                            </div>
                             <div class="error-message" id="passwordError"></div>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="confirmPassword">Confirm Password</label>
-                            <div class="input-group">
-                                <i class="fa-solid fa-lock input-icon"></i>
-                                <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirm your password" required>
-                                <button type="button" class="password-toggle" id="confirmPasswordToggle">
-                                    <i class="fa-solid fa-eye"></i>
-                                </button>
-                            </div>
-                            <div class="error-message" id="confirmPasswordError"></div>
                         </div>
 
                         <div class="form-options">
                             <label class="checkbox-container">
-                                <input type="checkbox" id="agreeTerms" required>
+                                <input type="checkbox" id="rememberMe">
                                 <span class="checkmark"></span>
-                                I agree to the <a href="#" class="terms-link">Terms of Service</a> and <a href="#" class="terms-link">Privacy Policy</a>
+                                Remember me
                             </label>
+                            <a href="#" class="forgot-password">Forgot password?</a>
                         </div>
 
-                        <button type="submit" class="btn primary large" id="signupBtn">
-                            <span class="btn-text">Create Account</span>
+                        <button type="submit" class="btn primary large" id="loginBtn">
+                            <span class="btn-text">Sign In</span>
                             <i class="fa-solid fa-spinner fa-spin btn-spinner" style="display: none;"></i>
                         </button>
 
@@ -167,7 +121,7 @@
                     </form>
 
                     <div class="auth-footer">
-                        <p>Already have an account? <a href="login.html">Sign in here</a></p>
+                        <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
                     </div>
                 </div>
 
@@ -195,13 +149,6 @@
                                 <p>Connect with other learners and share experiences</p>
                             </div>
                         </div>
-                        <div class="feature-item">
-                            <i class="fa-solid fa-brain"></i>
-                            <div>
-                                <h4>Adaptive Learning</h4>
-                                <p>AI-powered questions that adapt to your skill level</p>
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -220,13 +167,13 @@
         <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="supabase-config.js"></script>
-    <script src="supabaseClient.js"></script>
-    <script src="supabase-db.js"></script>
-    <script src="auth-check.js"></script>
-    <script src="backend-simulator.js"></script>
-    <script src="modern-ui.js"></script>
-    <script src="page-transitions.js"></script>
-    <script src="auth.js"></script>
+    <script src="js/supabase-config.js"></script>
+    <script src="js/supabaseClient.js"></script>
+    <script src="js/supabase-db.js"></script>
+    <script src="js/auth-check.js"></script>
+    <script src="js/backend-simulator.js"></script>
+    <script src="js/modern-ui.js"></script>
+    <script src="js/page-transitions.js"></script>
+    <script src="js/auth.js"></script>
 </body>
 </html>
