--- a/frontend/practice.html
+++ b/frontend/practice.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Practice Session • AI Interviewer</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <!-- CodeMirror for syntax highlighting -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.2/codemirror.min.css">
@@ -311,14 +311,14 @@ Explanation: Because nums[0] + nums[1] == 9, we return [0, 1].</pre>
     <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <script src="supabase-config.js"></script>
-  <script src="supabaseClient.js"></script>
-  <script src="supabase-db.js"></script>
-  <script src="backend-api.js"></script>
-  <script src="auth-check.js"></script>
-  <script src="backend-simulator.js"></script>
-  <script src="modern-ui.js"></script>
-  <script src="page-transitions.js"></script>
-  <script src="practice.js"></script>
+  <script src="js/supabase-config.js"></script>
+  <script src="js/supabaseClient.js"></script>
+  <script src="js/supabase-db.js"></script>
+  <script src="js/backend-api.js"></script>
+  <script src="js/auth-check.js"></script>
+  <script src="js/backend-simulator.js"></script>
+  <script src="js/modern-ui.js"></script>
+  <script src="js/page-transitions.js"></script>
+  <script src="js/practice.js"></script>
 </body>
 </html>
