--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Interviewer Web App</title>
+  <title>Big O</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -47,7 +47,7 @@
             </g>
           </svg>
         </div>
-        <span>AI Interviewer</span>
+        <span>Big O</span>
       </a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
       <label for="nav-toggle" class="nav-toggle-btn"><span></span><span></span><span></span></label>
@@ -76,7 +76,7 @@
     </section>
 
     <section class="container features">
-      <h2 class="section-title">Why use AI Interviewer?</h2>
+      <h2 class="section-title">Why use Big O?</h2>
       <div class="card-grid">
         <article class="card">
           <i class="fa-solid fa-code"></i>
@@ -152,7 +152,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> AI Interviewer. All rights reserved.</p>
+      <p>© <span id="year"></span> Big O. All rights reserved.</p>
       <div class="footer-links">
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
