--- a/frontend/services.html
+++ b/frontend/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Services • AI Interviewer</title>
+  <title>Services • Big O</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -47,7 +47,7 @@
             </g>
           </svg>
         </div>
-        <span>AI Interviewer</span>
+        <span>Big O</span>
       </a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
       <label for="nav-toggle" class="nav-toggle-btn"><span></span><span></span><span></span></label>
@@ -110,7 +110,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> AI Interviewer. All rights reserved.</p>
+      <p>© <span id="year"></span> Big O. All rights reserved.</p>
       <div class="footer-links">
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
