--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -56,6 +56,9 @@
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html" class="active">Contact</a>
+        <a href="admin.html" class="btn primary" style="margin-right: 0.5rem;"><i class="fas fa-shield-alt"></i> Admin Panel</a>
+        <a href="practice.html" class="btn">Practice</a>
+        <a href="ai-interview.html" class="btn primary">AI Interview</a>
         <a href="login.html" class="login-link"><i class="fa-regular fa-user"></i> Login</a>
       </nav>
     </div>
