--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -58,7 +58,9 @@
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
         <a href="dashboard.html" class="active">Dashboard</a>
-        <a href="practice.html" class="btn primary">Practice</a>
+        <a href="admin.html" class="btn primary" style="margin-right: 0.5rem;"><i class="fas fa-shield-alt"></i> Admin Panel</a>
+        <a href="practice.html" class="btn">Practice</a>
+        <a href="ai-interview.html" class="btn primary">AI Interview</a>
         <a href="login.html" class="login-link"><i class="fa-regular fa-user"></i> Profile</a>
       </nav>
     </div>
@@ -207,6 +209,31 @@
                 <span>0%</span>
               </div>
             </div>
+          </div>
+        </div>
+
+        <!-- Quick Actions -->
+        <div class="quick-actions-section">
+          <h2 class="section-title">Quick Actions</h2>
+          <div class="quick-actions-grid" id="quickActionsGrid">
+            <a href="propose-question.html" class="action-card">
+              <div class="action-icon">
+                <i class="fas fa-plus-circle"></i>
+              </div>
+              <div class="action-content">
+                <h4>Propose Question</h4>
+                <p>Submit a new question to be added to the question bank</p>
+              </div>
+            </a>
+            <a href="admin.html" class="action-card admin-link" id="adminPanelLink" style="display: none;">
+              <div class="action-icon">
+                <i class="fas fa-shield-alt"></i>
+              </div>
+              <div class="action-content">
+                <h4>Admin Panel</h4>
+                <p>Review and manage question proposals</p>
+              </div>
+            </a>
           </div>
         </div>
       </div>
