--- a/frontend/practice.html
+++ b/frontend/practice.html
@@ -190,10 +190,10 @@ Explanation: Because nums[0] + nums[1] == 9, we return [0, 1].</pre>
 }</textarea>
           </div>
           <div class="solution-actions">
-            <button id="runCodeBtn" class="btn">Run Code</button>
+            <button id="runCodeBtn" class="btn primary">Run Code</button>
             <button id="submitSolutionBtn" class="btn primary">Submit Solution</button>
-            <button id="getHintBtn" class="btn">Get Hint</button>
-            <button id="showSolutionBtn" class="btn">Show Solution</button>
+            <button id="getHintBtn" class="btn primary">Get Hint</button>
+            <button id="showSolutionBtn" class="btn primary">Show Solution</button>
           </div>
         </div>
 
