Standardize header navigation, enforce auth for AI Interview, and improve login/logout UI state

--- a/frontend/ai-interview.html
+++ b/frontend/ai-interview.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="css/ai-interview.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
   <header class="site-header">
     <div class="nav-container">
@@ -25,26 +27,28 @@
                 <stop offset="100%" style="stop-color:#00f2fe;stop-opacity:1" />
               </linearGradient>
               <filter id="glow">
-                <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
+                <feGaussianBlur stdDeviation="2" result="coloredBlur" />
                 <feMerge>
-                  <feMergeNode in="coloredBlur"/>
-                  <feMergeNode in="SourceGraphic"/>
+                  <feMergeNode in="coloredBlur" />
+                  <feMergeNode in="SourceGraphic" />
                 </feMerge>
               </filter>
             </defs>
             <g transform="translate(60, 60)">
-              <circle cx="-25" cy="-15" r="6" fill="url(#logoGradient1)" filter="url(#glow)"/>
-              <circle cx="25" cy="-15" r="6" fill="url(#logoGradient2)" filter="url(#glow)"/>
-              <circle cx="0" cy="0" r="10" fill="url(#logoGradient1)" filter="url(#glow)"/>
-              <circle cx="-20" cy="20" r="5" fill="url(#logoGradient2)" filter="url(#glow)"/>
-              <circle cx="20" cy="20" r="5" fill="url(#logoGradient1)" filter="url(#glow)"/>
-              <line x1="-25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient1)" stroke-width="1.5" opacity="0.7"/>
-              <line x1="25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient2)" stroke-width="1.5" opacity="0.7"/>
-              <line x1="0" y1="0" x2="-20" y2="20" stroke="url(#logoGradient1)" stroke-width="1.5" opacity="0.7"/>
-              <line x1="0" y1="0" x2="20" y2="20" stroke="url(#logoGradient2)" stroke-width="1.5" opacity="0.7"/>
-              <circle cx="0" cy="0" r="4" fill="#ffffff" opacity="0.9"/>
-              <text x="-30" y="8" font-family="Monaco, monospace" font-size="18" fill="url(#logoGradient1)" font-weight="bold">{</text>
-              <text x="18" y="8" font-family="Monaco, monospace" font-size="18" fill="url(#logoGradient2)" font-weight="bold">}</text>
+              <circle cx="-25" cy="-15" r="6" fill="url(#logoGradient1)" filter="url(#glow)" />
+              <circle cx="25" cy="-15" r="6" fill="url(#logoGradient2)" filter="url(#glow)" />
+              <circle cx="0" cy="0" r="10" fill="url(#logoGradient1)" filter="url(#glow)" />
+              <circle cx="-20" cy="20" r="5" fill="url(#logoGradient2)" filter="url(#glow)" />
+              <circle cx="20" cy="20" r="5" fill="url(#logoGradient1)" filter="url(#glow)" />
+              <line x1="-25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient1)" stroke-width="1.5" opacity="0.7" />
+              <line x1="25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient2)" stroke-width="1.5" opacity="0.7" />
+              <line x1="0" y1="0" x2="-20" y2="20" stroke="url(#logoGradient1)" stroke-width="1.5" opacity="0.7" />
+              <line x1="0" y1="0" x2="20" y2="20" stroke="url(#logoGradient2)" stroke-width="1.5" opacity="0.7" />
+              <circle cx="0" cy="0" r="4" fill="#ffffff" opacity="0.9" />
+              <text x="-30" y="8" font-family="Monaco, monospace" font-size="18" fill="url(#logoGradient1)"
+                font-weight="bold">{</text>
+              <text x="18" y="8" font-family="Monaco, monospace" font-size="18" fill="url(#logoGradient2)"
+                font-weight="bold">}</text>
             </g>
           </svg>
         </div>
@@ -57,10 +61,11 @@
         <a href="about.html">About</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
-        <a href="dashboard.html">Dashboard</a>
-        <a href="admin.html" class="btn primary" style="margin-right: 0.5rem;"><i class="fas fa-shield-alt"></i> Admin Panel</a>
-        <a href="practice.html">Practice</a>
-        <a href="login.html" class="login-link"><i class="fa-regular fa-user"></i> Profile</a>
+        <a href="admin.html" class="btn primary admin-only" style="margin-right: 0.5rem; display: none;"><i
+            class="fas fa-shield-alt"></i> Admin Panel</a>
+        <a href="practice.html" class="btn">Practice</a>
+        <a href="ai-interview.html" class="btn primary active">AI Interview</a>
+        <a href="login.html" class="login-link"><i class="fa-regular fa-user"></i> Login</a>
       </nav>
     </div>
   </header>
@@ -71,7 +76,7 @@
       <div id="setupPanel" class="setup-panel">
         <h1>AI Live Interview</h1>
         <p class="subtitle">Practice with an AI interviewer that adapts to your responses</p>
-        
+
         <form id="setupForm" class="setup-form">
           <div class="form-group">
             <label for="interviewTopic">Interview Topic</label>
@@ -127,7 +132,7 @@
             <div id="chatMessages" class="chat-messages">
               <!-- Messages will be appended here -->
             </div>
-            
+
             <!-- Typing Indicator -->
             <div id="typingIndicator" class="typing-indicator" style="display: none;">
               <div class="typing-dot"></div>
@@ -148,11 +153,8 @@
               </button>
             </div>
             <div class="chat-input-wrapper">
-              <textarea 
-                id="chatInput" 
-                placeholder="Type your thoughts, approach, or ask for help..."
-                rows="3"
-              ></textarea>
+              <textarea id="chatInput" placeholder="Type your thoughts, approach, or ask for help..."
+                rows="3"></textarea>
               <button id="sendBtn" class="btn primary">
                 <i class="fas fa-paper-plane"></i> Send
               </button>
@@ -213,6 +215,9 @@
   <script src="js/supabase-config.js"></script>
   <script src="js/supabaseClient.js"></script>
   <script src="js/ai-interview.js"></script>
+  <script src="js/auth-check.js"></script>
+  <script src="js/modern-ui.js"></script>
+  <script src="js/page-transitions.js"></script>
 </body>
-</html>
 
+</html>
