--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,17 +9,17 @@
   <link rel="stylesheet" href="css/admin.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body class="admin-body">
   <header class="admin-header">
     <div class="admin-header-content">
       <h1 class="admin-title">AI Interviewer - Admin</h1>
       <nav class="admin-nav">
-        <a href="dashboard.html">Dashboard</a>
+        <a href="ai-interview.html">AI Interview</a>
         <a href="practice.html">Practice</a>
-        <a href="ai-interview.html" class="btn primary">AI Interview</a>
         <a href="admin.html" class="active" style="font-weight: bold;"><i class="fas fa-shield-alt"></i> Admin Panel</a>
         <a href="index.html">Community</a>
-        <a href="dashboard.html">Profile</a>
+        <a href="login.html" class="profile-link"><i class="fa-regular fa-user"></i> Profile</a>
       </nav>
     </div>
   </header>
@@ -85,6 +86,5 @@
   <script src="js/admin-session-protect.js"></script>
   <script type="module" src="js/admin.js?v=2"></script>
 </body>
+
 </html>
-
-
