--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,47 +8,54 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
     <header class="site-header">
         <div class="nav-container">
             <a href="index.html" class="brand">
-              <div class="logo-icon">
-                <svg width="32" height="32" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <defs>
-                    <linearGradient id="logoGradient1" x1="0%" y1="0%" x2="100%" y2="100%">
-                      <stop offset="0%" style="stop-color:#667eea;stop-opacity:1" />
-                      <stop offset="50%" style="stop-color:#764ba2;stop-opacity:1" />
-                      <stop offset="100%" style="stop-color:#f093fb;stop-opacity:1" />
-                    </linearGradient>
-                    <linearGradient id="logoGradient2" x1="0%" y1="0%" x2="100%" y2="100%">
-                      <stop offset="0%" style="stop-color:#4facfe;stop-opacity:1" />
-                      <stop offset="100%" style="stop-color:#00f2fe;stop-opacity:1" />
-                    </linearGradient>
-                    <filter id="glow">
-                      <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
-                      <feMerge>
-                        <feMergeNode in="coloredBlur"/>
-                        <feMergeNode in="SourceGraphic"/>
-                      </feMerge>
-                    </filter>
-                  </defs>
-                  <g transform="translate(60, 60)">
-                    <circle cx="-25" cy="-15" r="6" fill="url(#logoGradient1)" filter="url(#glow)"/>
-                    <circle cx="25" cy="-15" r="6" fill="url(#logoGradient2)" filter="url(#glow)"/>
-                    <circle cx="0" cy="0" r="10" fill="url(#logoGradient1)" filter="url(#glow)"/>
-                    <circle cx="-20" cy="20" r="5" fill="url(#logoGradient2)" filter="url(#glow)"/>
-                    <circle cx="20" cy="20" r="5" fill="url(#logoGradient1)" filter="url(#glow)"/>
-                    <line x1="-25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient1)" stroke-width="1.5" opacity="0.7"/>
-                    <line x1="25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient2)" stroke-width="1.5" opacity="0.7"/>
-                    <line x1="0" y1="0" x2="-20" y2="20" stroke="url(#logoGradient1)" stroke-width="1.5" opacity="0.7"/>
-                    <line x1="0" y1="0" x2="20" y2="20" stroke="url(#logoGradient2)" stroke-width="1.5" opacity="0.7"/>
-                    <circle cx="0" cy="0" r="4" fill="#ffffff" opacity="0.9"/>
-                    <text x="-30" y="8" font-family="Monaco, monospace" font-size="18" fill="url(#logoGradient1)" font-weight="bold">{</text>
-                    <text x="18" y="8" font-family="Monaco, monospace" font-size="18" fill="url(#logoGradient2)" font-weight="bold">}</text>
-                  </g>
-                </svg>
-              </div>
-              <span>AI Interviewer</span>
+                <div class="logo-icon">
+                    <svg width="32" height="32" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <defs>
+                            <linearGradient id="logoGradient1" x1="0%" y1="0%" x2="100%" y2="100%">
+                                <stop offset="0%" style="stop-color:#667eea;stop-opacity:1" />
+                                <stop offset="50%" style="stop-color:#764ba2;stop-opacity:1" />
+                                <stop offset="100%" style="stop-color:#f093fb;stop-opacity:1" />
+                            </linearGradient>
+                            <linearGradient id="logoGradient2" x1="0%" y1="0%" x2="100%" y2="100%">
+                                <stop offset="0%" style="stop-color:#4facfe;stop-opacity:1" />
+                                <stop offset="100%" style="stop-color:#00f2fe;stop-opacity:1" />
+                            </linearGradient>
+                            <filter id="glow">
+                                <feGaussianBlur stdDeviation="2" result="coloredBlur" />
+                                <feMerge>
+                                    <feMergeNode in="coloredBlur" />
+                                    <feMergeNode in="SourceGraphic" />
+                                </feMerge>
+                            </filter>
+                        </defs>
+                        <g transform="translate(60, 60)">
+                            <circle cx="-25" cy="-15" r="6" fill="url(#logoGradient1)" filter="url(#glow)" />
+                            <circle cx="25" cy="-15" r="6" fill="url(#logoGradient2)" filter="url(#glow)" />
+                            <circle cx="0" cy="0" r="10" fill="url(#logoGradient1)" filter="url(#glow)" />
+                            <circle cx="-20" cy="20" r="5" fill="url(#logoGradient2)" filter="url(#glow)" />
+                            <circle cx="20" cy="20" r="5" fill="url(#logoGradient1)" filter="url(#glow)" />
+                            <line x1="-25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient1)" stroke-width="1.5"
+                                opacity="0.7" />
+                            <line x1="25" y1="-15" x2="0" y2="0" stroke="url(#logoGradient2)" stroke-width="1.5"
+                                opacity="0.7" />
+                            <line x1="0" y1="0" x2="-20" y2="20" stroke="url(#logoGradient1)" stroke-width="1.5"
+                                opacity="0.7" />
+                            <line x1="0" y1="0" x2="20" y2="20" stroke="url(#logoGradient2)" stroke-width="1.5"
+                                opacity="0.7" />
+                            <circle cx="0" cy="0" r="4" fill="#ffffff" opacity="0.9" />
+                            <text x="-30" y="8" font-family="Monaco, monospace" font-size="18"
+                                fill="url(#logoGradient1)" font-weight="bold">{</text>
+                            <text x="18" y="8" font-family="Monaco, monospace" font-size="18" fill="url(#logoGradient2)"
+                                font-weight="bold">}</text>
+                        </g>
+                    </svg>
+                </div>
+                <span>AI Interviewer</span>
             </a>
             <input type="checkbox" id="nav-toggle" class="nav-toggle" aria-label="Toggle navigation">
             <label for="nav-toggle" class="nav-toggle-btn"><span></span><span></span><span></span></label>
@@ -56,9 +64,9 @@
                 <a href="about.html">About</a>
                 <a href="services.html">Services</a>
                 <a href="contact.html">Contact</a>
-                <a href="dashboard.html">Dashboard</a>
-                <a href="admin.html" class="btn primary" style="margin-right: 0.5rem;"><i class="fas fa-shield-alt"></i> Admin Panel</a>
-                <a href="practice.html">Practice</a>
+                <a href="admin.html" class="btn primary admin-only" style="margin-right: 0.5rem; display: none;"><i
+                        class="fas fa-shield-alt"></i> Admin Panel</a>
+                <a href="practice.html" class="btn">Practice</a>
                 <a href="ai-interview.html" class="btn primary">AI Interview</a>
                 <a href="login.html" class="active login-link"><i class="fa-regular fa-user"></i> Login</a>
             </nav>
@@ -82,7 +90,7 @@
                         <h2>Sign In</h2>
                         <p>Enter your credentials to access your account</p>
                     </div>
-                    
+
                     <form class="auth-form" id="loginForm">
                         <div class="form-group">
                             <label for="email">Email Address</label>
@@ -97,7 +105,8 @@
                             <label for="password">Password</label>
                             <div class="input-group">
                                 <i class="fa-solid fa-lock input-icon"></i>
-                                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                                <input type="password" id="password" name="password" placeholder="Enter your password"
+                                    required>
                                 <button type="button" class="password-toggle" id="passwordToggle">
                                     <i class="fa-solid fa-eye"></i>
                                 </button>
@@ -119,7 +128,7 @@
                             <i class="fa-solid fa-spinner fa-spin btn-spinner" style="display: none;"></i>
                         </button>
 
-                        
+
                     </form>
 
                     <div class="auth-footer">
@@ -168,11 +177,11 @@
         </div>
         <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2" onerror="console.error('Failed to load Supabase library from CDN')"></script>
+    <script src="js/supabase.min.js"></script>
     <script>
         // Diagnostic: Check if Supabase library loaded
-        window.addEventListener('load', function() {
-            setTimeout(function() {
+        window.addEventListener('load', function () {
+            setTimeout(function () {
                 console.log('Supabase library check:', {
                     'window.supabase': typeof window.supabase,
                     'window.supabaseJs': typeof window.supabaseJs,
@@ -193,4 +202,5 @@
     <script src="js/page-transitions.js"></script>
     <script src="js/auth.js"></script>
 </body>
+
 </html>
